force-app/main/default/objects/Email_to_Flow_Received__e/Email_to_Flow_Received__e.object-meta.xml
<CustomObject>
    <description>Platform Event that will be published from the EmailToFlow class once an email is received</description>
    <label>Email to Flow Received</label>
    <pluralLabel>Emails to Flow Received</pluralLabel>
</CustomObject>