force-app/main/default/objects/Email_to_Flow_Received__e/fields/Content_Version_Ids__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Ids__c</fullName>
    <description>Id&apos;s of Content Version for Email Attachments</description>
    <label>Content Version Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>