force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_CC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_Addresses__c</fullName>
    <description>A list of CC Addresses separated by a comma</description>
    <label>Email CC Addresses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>