force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_From_Address__c</fullName>
    <label>Email From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>