force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_In_ReplyTo__c.field-meta.xml
<CustomField>
    <fullName>Email_In_ReplyTo__c</fullName>
    <label>Email In ReplyTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>