force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_Is_HTML_Truncated__c.field-meta.xml
<CustomField>
    <fullName>Email_Is_HTML_Truncated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Is HTML Truncated</label>
    <type>Checkbox</type>
</CustomField>