force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <label>Email Message Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>