force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_References__c.field-meta.xml
<CustomField>
    <fullName>Email_References__c</fullName>
    <description>List of Email References separated by a comma</description>
    <label>Email References</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>