force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Reply_To__c</fullName>
    <label>Email Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>