force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Text_Body__c</fullName>
    <label>Email Text Body</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>