force-app/main/default/objects/Email_to_Flow_Received__e/fields/Email_To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Addresses__c</fullName>
    <label>Email To Addresses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>