force-app/main/default/objects/Email_to_Flow_Received__e/fields/Envelope_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Envelope_From_Address__c</fullName>
    <label>Envelope From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>